Fixing spacing issues :fire:

--- a/app/scss/components/_containers.scss
+++ b/app/scss/components/_containers.scss
@@ -1,14 +1,19 @@
 .slides {
   .title {
     font-size: 4.5rem;
-    &.inactive {
-      display: none;
-    }
+    margin-bottom: .75rem;
     span {
       display: inline-block;
       opacity: 0;
       position: relative;
       text-align: left;
     }
+    &.inactive {
+      display: none;
+    }
+  }
+
+  .content {
+    text-align: left;
   }
 }
