--- a/app/scss/general/_general.scss
+++ b/app/scss/general/_general.scss
@@ -4,7 +4,7 @@
 
 body {
   background: $blue;
-  font-family: 'Roboto', 'Helvetica';
+  color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left;
   text-shadow: 0 0 18px rgba(0, 0, 0, 0.5);
   position: relative;
+}
+
+div, section, article, p {
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 .text-center {
